# Tiny_Chatroom

Stress_test/: CMakeLists.txt  client_test.cpp
Stress_test/ProtocolHead/: DataEncoder.cpp  DataEncoder.h  HeadData.cpp  HeadData.h  protocolmsg.h
Stress_test/regist_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  regist_test.cpp
server/: CMakeLists.txt  Makefile  log  main  main.cpp  main_copy.cpp  threadpool.h
server/Dao/: MySQLConnector.cpp  MySQLConnector.h
server/ProtocolHead/: DataEncoder.cpp  HeadData.cpp  HeadData.h  protocolmsg.h
server/Service/: DataProcesser.cpp  DataProcesser.h  Online.cpp  Online.h  UserService.cpp  UserService.h
server/Util/: MyTime.cpp  MyTime.h  main
server/config/: mysql_config.h  server_config.h
server/image/: README.md
server/main_copy/: main.cpp  threadpool.h
server/sql/: user.sql
